deploy: 8f4581759afff694594cb2a580a210d1d1bb8eaa

--- a/print.html
+++ b/print.html
@@ -36,7 +36,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-1e3845e7.js";
+            window.path_to_searchindex_js = "searchindex-c92dff34.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-e5be467c.js"></script>
@@ -271,7 +271,7 @@ and they had to be disabled. These types are therefore absent in SwiftWasm Found
 <tr><td><code>RunLoop</code></td><td>❌ Unavailable</td></tr>
 <tr><td><code>Stream</code></td><td>✅ Partially available after 6.0</td></tr>
 <tr><td><code>SocketPort</code></td><td>❌ Unavailable</td></tr>
-<tr><td><code>Thread</code></td><td>❌ Unavailable</td></tr>
+<tr><td><code>Thread</code></td><td>✅ Available after 6.4</td></tr>
 <tr><td><code>Timer</code></td><td>❌ Unavailable</td></tr>
 <tr><td><code>UserDefaults</code></td><td>✅ Available after 6.0</td></tr>
 </tbody>
